[gd_scene load_steps=4 format=3 uid="uid://bj3bbecofasqu"]

[ext_resource type="Script" path="res://scripts/subject_select.gd" id="1_b03vg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_18df3"]
content_margin_left = 25.0
content_margin_top = 10.0
content_margin_right = 25.0
content_margin_bottom = 15.0
bg_color = Color(0.465479, 0.599962, 0.84858, 1)
border_width_bottom = 6
border_color = Color(0.311918, 0.461167, 0.781952, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 5

[sub_resource type="Theme" id="Theme_yk76h"]
Button/styles/normal = SubResource("StyleBoxFlat_18df3")

[node name="SubjectSelect" type="Node"]
script = ExtResource("1_b03vg")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -27.0
offset_right = 144.0
offset_bottom = 109.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="anim1" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_yk76h")
theme_override_font_sizes/font_size = 20
text = "Animation 1"

[node name="anim2" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_yk76h")
theme_override_font_sizes/font_size = 20
text = "Animation 2"

[node name="previous" type="Button" parent="CanvasLayer"]
offset_left = 16.0
offset_top = 16.0
offset_right = 136.0
offset_bottom = 64.0
theme = SubResource("Theme_yk76h")
text = "Previous"

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -171.0
offset_right = 160.0
offset_bottom = -123.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Choose Your Subject"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="CanvasLayer/VBoxContainer/anim1" to="." method="_on_anim_1_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/anim2" to="." method="_on_anim_2_pressed"]
[connection signal="pressed" from="CanvasLayer/previous" to="." method="_on_previous_pressed"]
